--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.3",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
     "qrcode-terminal": "^0.12.0",
